[package]
name = "frigate"
version = "1.0.0"
edition = "2021"
about = "Update a Libium 1.5 config to a Libium 1.6 config"

[dependencies]
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros"] }
libium_new = { package = "libium", version = "1.6" }
libium_old = { package = "libium", version = "1.5" }
serde_json = "1"
